--- a/package.json
+++ b/package.json
@@ -5,11 +5,8 @@
 	"main": "backend/server.js",
 	"scripts": {
 		"dev": "cross-env NODE_ENV=development nodemon backend/server.js",
-	
 		"start": "set NODE_ENV=production && node backend/server.js",
-		 "build": "npm install && npm install --prefix frontend && npm run build --prefix frontend"
-
-	
+		"build": "npm install && npm install --prefix frontend && npm run build --prefix frontend"
 	},
 	"keywords": [],
 	"author": "",
@@ -27,6 +24,7 @@
 	},
 	"devDependencies": {
 		"cross-env": "^7.0.3",
+		"daisyui": "^5.0.19",
 		"nodemon": "^3.1.0"
 	}
 }
